Fix ux issues * use a lighter shade of grey for the bullet between Saved & Pinned * use blue color for the selected (flagged) state of the flag icon * fix vertical misalignment of the pin icon in the post pre-header

--- a/sass/components/_post.scss
+++ b/sass/components/_post.scss
@@ -1185,8 +1185,8 @@
                     margin-left: 9px;
                 }
 
-                &.icon-pin {
-                    padding-top: 2px;
+                &.icon-pin::before {
+                    line-height: 10px;
                 }
             }
         }
@@ -1198,7 +1198,7 @@
 
             .post-pre-header__link-separator {
                 margin: 0px 5px;
-                color: var(--center-channel-color-64);
+                color: var(--center-channel-color-32);
                 font-size: 4px;
                 vertical-align: top;
             }
