--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -683,10 +683,6 @@
                     &:nth-of-type(even) {
                         margin-left: 8px;
                     }
-
-                    &.icon-pin {
-                        padding-top: 0;
-                    }
                 }
             }
         }
